Update PodTemplate so both contains start corrected

--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -13,9 +13,9 @@ spec:
       tty: true
 
     - name: kaniko
-      image: gcr.io/kaniko-project/executor:latest
-      command: ['sleep']
-      args: ['infinity']
+      image: gcr.io/kaniko-project/executor:debug
+      command: ["/busybox/sh"]
+      args: ["-c", "sleep infinity"]
       tty: true
 """
         }
