--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -7,7 +7,7 @@ kind: Pod
 spec:
   containers:
     - name: python
-      image: python:3.12-slim
+      image: python:3.12
       command: ['sleep']
       args: ['infinity']
       tty: true
