--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = django_app.settings
 python_files = tests.py test_*.py *_tests.py
+addopts = --cov=django_app --cov-report=term-missing
