--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,8 @@
 DJANGO_SETTINGS_MODULE = django_app.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = --cov=django_app --cov-report=term-missing
+
+[coverage:run]
+omit =
+    django_app/asgi.py
+    django_app/wsgi.py
