--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -122,7 +122,7 @@ EOF
         stage('Update GitOps Repository') {
             steps {
                 container('python') {
-                    withCredentials([usernamePassword(credentialsId: 'github-https', usernameVariable: 'USER', passwordVariable: 'PASS')]) {
+                    withCredentials([usernamePassword(credentialsId: 'gitops-creds', usernameVariable: 'USER', passwordVariable: 'PASS')]) {
                         sh '''
                           set -e
 
