Update migrate job

--- a/projects/django-app/helm/django-app/templates/migrate-job.yaml
+++ b/projects/django-app/helm/django-app/templates/migrate-job.yaml
@@ -29,8 +29,8 @@ spec:
 
       containers:
         - name: migrate
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: "{{ .Values.migrate.image.repository }}:{{ .Values.migrate.image.tag }}"
+          imagePullPolicy: {{ .Values.migrate.image.pullPolicy }}
           command: ["python"]
           args: ["manage.py", "migrate", "--noinput"]
 
