Update values files

--- a/projects/django-app/helm/django-app/values.yaml
+++ b/projects/django-app/helm/django-app/values.yaml
@@ -127,3 +127,7 @@ affinity: {}
 # -------------------------------------------------------------------
 migrate:
   enabled: true
+  image:
+    repository: ghcr.io/jaosullivan/django-app
+    tag: landingpage-v1
+    pullPolicy: IfNotPresent
